<resources>
    <string name="app_name">Inventory</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_tvTittleLogin_text">Login</string>
    <string name="tieUser_hint">Nombre de usuario</string>
    <string name="login_tietPassword_hint">Contraseña</string>
    <string name="login_chkRemenber_text">Recuerdame</string>
    <string name="login_btSignUp_text">Registrar</string>
    <string name="login_btSignIn_text">Login</string>
    <string name="login_tvOtherLogin_text">Iniciar sesion con otras plataformas</string>
    <string name="tvTittleLogin_text">Registro</string>
    <string name="tieEmail_hint">Introduce tu email</string>
    <string name="tiePassword_hint">Contraseña</string>
    <string name="tieConfirmPassword_hint">Confirmar contraseña</string>
    <string name="btSignUp_text">Registrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragDashboard_imgBtnInventory_text">imagen de inventoryhome</string>
    <string name="fragDashboard_imgBtnDependencies_text">imagen de dependencias</string>
    <string name="fragDashboard_imgBtnSectors_text">imagend e sectores</string>
    <string name="fragDashboard_imgBtnProducts_text">imagen de productos</string>
    <string name="fragDashboard_imgBtnSettings_text">imagen de ajustes</string>
    <string name="fragDashboard_imgBtnAboutUs_text">imagen de aboutus</string>
    <string name="aboutus_fragemnt_label">fragment_about_us</string>
    <string name="dashBoard_fragemnt_label">fragment_dash_board</string>
    <string name="tvCreated_text">Fecha Creacion:</string>
    <string name="tvActivated_text">Fecha Inicio</string>
    <string name="tvEdit_text">Modificar inventario</string>
    <string name="tvEnded_text">Fecha Fin</string>
    <string name="cD_edCreated">Debes introducir la fecha de creacion</string>
    <string name="cD_edActivated">Debes poner la fecha donde un calendario se activa</string>
    <string name="cD_edEnded">Debes introducir la fecha de cierre del inventario</string>
    <string name="errPasswordEmpty">No puede ser vacio</string>
    <string name="errPasswordNotEquals">Las contraseñas no coinciden</string>
    <string name="errEmailEmpty">El email no puede ser vacio</string>
    <string name="action_search">Buscar</string>
    <string name="acion_aboutus">About Us</string>
    <string name="action_settings">Configuracion</string>
    <string name="action_orderdependency">Ordenar Dependencias</string>
    <string name="title_delete_dependency">Eliminar la dependencia %1$s</string>
    <string name="message_delete_dependency">¿Quiere eliminar la dependencia %1$s ?</string>
    <string name="action_orderbydescrip_dependency">Ordenar por descripcion</string>
    <string name="undo">Deshacer</string>
    <string name="title_edit_ependency">Editar Dependencia</string>
    <string name="tvUser">Usuario</string>
    <string name="tvEmail">userusuario@gmail.com</string>
    <string name="action_inventory">Inventario</string>
    <string name="action_dependency">Dependencias</string>
    <string name="action_section">Seccion</string>
    <string name="action_product">Producto</string>
    <string name="menu_options">Opciones</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="name_channel">inventory_channel</string>
    <string name="notification_title_add_dependency">Dependencia añadida</string>
    <string name="title_edit_dependency">Editar dependencia</string>
    <string name="tvnoDataSection">No hay secciones añadidas</string>
    <string name="title_edit_section">Editar Seccion</string>
    <string name="notification_title_add_section">Seccion añadida</string>
    <string name="action_order_sectionbyname">Ordenar Secciones</string>
    <string name="tvTittleDepId_text">Id: </string>
    <string name="tvTittleSectionFragment_text" >Secciones: </string>
    <string name="tvTittleDepName_text">Nombre: </string>
</resources>