<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/addInventoryFragment"
            android:icon="@drawable/ic_action_ab_us"
            android:title="@string/action_inventory"
            />

        <item
            android:id="@+id/depndencyListFragment"
            android:icon="@drawable/ic_action_ab_us"
            android:title="@string/action_dependency"
             />

        <item
            android:id="@+id/sectionListFragment"
            android:icon="@drawable/ic_action_ab_us"
            android:title="@string/action_section"
             />

        <item
            android:id="@+id/productFragment"
            android:icon="@drawable/ic_action_ab_us"
            android:title="@string/action_product"
            />
    </group>
    <item android:title="@string/menu_options">
        <menu>
            <item
                android:id="@+id/aboutUsFragment"
                android:icon="@drawable/ic_action_ab_us"
                android:title="@string/acion_aboutus" />
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/action_settings"
                />
        </menu>
    </item>
</menu>