<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inventory.AddInventoryFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdlnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdlnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tvCreated_text"
        app:layout_constraintStart_toStartOf="@+id/gdlnLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edCreated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:inputType="date"
        android:maxLines="1"
        android:contentDescription="@string/cD_edCreated"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvCreated"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@+id/gdlnRight"/>

    <TextView
        android:id="@+id/tvActivated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tvActivated_text"
        app:layout_constraintStart_toStartOf="@+id/gdlnLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvCreated" />
    <EditText
        android:id="@+id/edActivated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:inputType="date"
        android:maxLines="1"
        android:contentDescription="@string/cD_edActivated"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvActivated"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@+id/gdlnRight"/>

    <TextView
        android:id="@+id/tvEnded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tvEnded_text"
        app:layout_constraintStart_toStartOf="@+id/gdlnLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvActivated" />

    <EditText
        android:id="@+id/edEnded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:inputType="date"
        android:maxLines="1"
        android:contentDescription="@string/cD_edEnded"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvEnded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@+id/gdlnRight"/>

    <TextView
        android:id="@+id/tvEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tvEdit_text"
        app:layout_constraintStart_toStartOf="@+id/gdlnLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvEnded" />

    <Button
        android:id="@+id/btOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEdit"
        app:layout_constraintVertical_bias="0.7" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tvCreated,tvActivated,tvEnded,tvEdit"
        tools:layout_editor_absoluteX="146dp" />

    <Switch
        android:id="@+id/swEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvEdit"
        app:layout_constraintEnd_toStartOf="@+id/gdlnRight"
        app:layout_constraintStart_toStartOf="@+id/barrier"/>

</androidx.constraintlayout.widget.ConstraintLayout>