<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.inventory.ui.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.login.LoginActivity">

        <TextView
            android:id="@+id/tvTittleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_tvTitleLogin_marginTop"
            android:fontFamily="@font/robotolight"
            android:textSize="@dimen/inventory_title_textSixe"
            android:text="@string/login_tvTittleLogin_text"
            android:gravity="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/login_tilUser_marginTop"
            android:layout_height="wrap_content"
            style="@style/InventoryTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewmodel.email}"
                android:hint="@string/tieUser_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            app:errorEnabled="true"
            android:layout_marginTop="@dimen/login_tilPassword_marginTop"
            app:endIconMode="password_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InventoryTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewmodel.passwd}"
                android:hint="@string/login_tietPassword_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_chkBtnLog_marginTop"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chkRemenber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:text="@string/login_chkRemenber_text"
                android:backgroundTint="@color/colorSecondary" />

            <Button
                android:id="@+id/btSignUp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/login_btSignUp_text"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <Button
            android:id="@+id/btSingIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_btSignIn_text"
            android:layout_marginTop="@dimen/login_btSignIn_marginTop"
            android:onClick="@{() -> viewmodel.validateCredentials()}"
            android:backgroundTint="@color/colorSecondary" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="invisible"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal" />

        <TextView
            android:id="@+id/tvOtherLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="@dimen/login_tvOtherLogin_paddingBottom"
            android:text="@string/login_tvOtherLogin_text"
            android:gravity="bottom|center"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgBtnFacebook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="SpeakableTextPresentCheck"
                app:srcCompat="@drawable/ic_facebook"
                android:background="@android:color/transparent" />

            <ImageButton
                android:id="@+id/imgBtnGoogle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="SpeakableTextPresentCheck"
                app:srcCompat="@drawable/ic_google"
                android:background="@android:color/transparent" />
        </LinearLayout>

        <!-- <ProgressBar
             android:id="@+id/loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="64dp"
             android:layout_marginBottom="64dp"
             android:visibility="gone" />-->

    </LinearLayout>
</layout>